@@ -2,14 +2,18 @@
 .\" Process with
 .\" nroff -man file_exists.3
 .\" 2011-03-16 JoungKyun Kim <htt://oops.org>
-.\" $Id: file_exists.3,v 1.2 2011-03-24 09:46:58 oops Exp $
+.\" $Id: file_exists.3,v 1.3 2011-03-24 11:29:24 oops Exp $
 .SH 이름
 file_exists \- 파일이나 디렉토리가 존재하는지 검사
+.br
+file_status \- 파일의 타입을 검사
 
 .SH 사용법
 .B #include <olibc/libfile.h>
 .sp
 .BI "int file_exists (const char * path, int mode);"
+.br
+.BI "int file_status (const char * path);"
 
 .SH 라이브러리 링크
 .B \-loc
@@ -31,7 +35,8 @@ or
 를 이용해야 한다.
 
 .SH 설명
-해당 경로가 존재하는지 여부를 체크한다. 모드를 지정하면 해당 경로의 타입까지
+.BI file_exists()
+api는 해당 경로가 존재하는지 여부를 체크한다. 모드를 지정하면 해당 경로의 타입까지
 체크가 가능하다.
 
 .TP
@@ -69,8 +74,22 @@ or
 .B OC_IS_SOCK 7
 => path 가 소켓 인지를 체크
 
+.PP
+.BI file_status()
+api는 해당 파일의 형태를 반환한다.
+
+.TP
+.B path
+.br
+체크할 경로를 지정한다.
+
 .SH 반환값
-참이면 1을 반환하고, 거짓이면 0을 반환한다.
+.BI file_exists()
+api는 참이면 1을 반환하고, 거짓이면 0을 반환한다.
+
+.BI file_status()
+api는 파일에 문제가 있을 경우 false를 반환하고, 정상적인
+파일이나 디렉토리일 경우 해당 타입의 상수값을 반환한다.
 
 .SH 예제
 .nf
@@ -87,6 +106,11 @@ int main (void) {
     printf ("BDEV : %d\\n", file_exists (path, OC_IS_BDEV));
     printf ("FIFO : %d\\n", file_exists (path, OC_IS_FIFO));
     printf ("SOCK : %d\\n", file_exists (path, OC_IS_SOCK));
+
+    printf (
+        "%s is %s directory\\n",
+        (file_exists (path) == OC_IS_DIR) ? "" : "not"
+    );
 
     return 0;
 }
