@@ -10,7 +10,13 @@ int main (void) {
 	b = file_exists (path, OC_IS_FILE);
 	c = file_exists (path, OC_IS_DIR);
 
-	printf ("%s\n", (a && ! b && c) ? "ok" : "failed\n");
+	printf ("%s\n", (a && ! b && c) ? "ok" : "failed");
+
+	oc_test_banner ("file_status");
+	printf (
+		"%s\n",
+		(file_status (path) == OC_IS_DIR) ? "ok" : "failed"
+	);
 
 	return 0;
 }
