@@ -1,9 +1,10 @@
 Changelog
 
-$Id: Changes,v 1.72 2011-03-24 11:00:10 oops Exp $
+$Id: Changes,v 1.73 2011-03-24 11:29:24 oops Exp $
 
 * Thu, Mar 24 2011
 	- changed internal variable name for conflict other programs
+	- add file_status() api
 
 * Wed, Mar 23 2011
 	- removed fileread api. use readfile api
